--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <app-countries></app-countries>
+        </div>
+        <div class="col-sm-4">
+            <app-state ></app-state>   
+        </div> 
+        
+    </div>
+</div>
 
 
 <router-outlet></router-outlet>
